--- a/src/ResourceManager/RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery.csproj
+++ b/src/ResourceManager/RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery/Commands.RecoveryServices.SiteRecovery.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AlertSetting\SetAzureRmRecoveryServicesAsrAlertSetting.cs" />
     <Compile Include="AlertSetting\GetAzureRmRecoveryServicesAsrAlertSetting.cs" />
     <Compile Include="Common\PSAsrAlertSettingClient.cs" />
+    <Compile Include="Common\PSAsrComputeManagementClient.cs" />
     <Compile Include="Common\PSAsrEventClient.cs" />
     <Compile Include="Common\PSAsrNetworkClient.cs" />
     <Compile Include="Common\PSAsrNetworkMappingClient.cs" />
@@ -184,6 +185,10 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication\Commands.Common.Authentication.csproj">
       <Project>{D3804B64-C0D3-48F8-82EC-1F632F833C9E}</Project>
       <Name>Commands.Common.Authentication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Compute\Commands.Common.Compute.csproj">
+      <Project>{F6D508D1-BE2D-475D-AA0F-DFB5C615CC9D}</Project>
+      <Name>Commands.Common.Compute</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Common\Commands.Common\Commands.Common.csproj">
       <Project>{5ee72c53-1720-4309-b54b-5fb79703195f}</Project>
