--- a/src/ResourceManager/DataMigration/Commands.DataMigration.Test/Commands.DataMigration.Test.csproj
+++ b/src/ResourceManager/DataMigration/Commands.DataMigration.Test/Commands.DataMigration.Test.csproj
@@ -194,4 +194,5 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\..\..\tools\Common.Dependencies.Test.targets" />
 </Project>
