--- a/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.csproj
+++ b/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.csproj
@@ -160,6 +160,10 @@
       <Project>{4cca7339-15bf-4066-9fa1-6a23a58f2cee}</Project>
       <Name>Commands.Common.Storage.Management</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\Commands.Common.KeyVault\Commands.Common.KeyVault.csproj">
+      <Project>{836965C0-B198-4D01-B3D7-757DB62B49A0}</Project>
+      <Name>Commands.Common.Storage.Management</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Common\Commands.Common.Network\Commands.Common.Network.csproj">
       <Project>{1338F7AE-7111-4ED3-8916-2D0FECC876F4}</Project>
       <Name>Commands.Common.Network</Name>
