--- a/src/ResourceManager/ServiceFabric/Commands.ServiceFabric.Test/Commands.ServiceFabric.Test.csproj
+++ b/src/ResourceManager/ServiceFabric/Commands.ServiceFabric.Test/Commands.ServiceFabric.Test.csproj
@@ -265,7 +265,7 @@
       <Project>{F6D508D1-BE2D-475D-AA0F-DFB5C615CC9D}</Project>
       <Name>Commands.Common.Compute</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Common\Commands.Common.Keyvault\Commands.Common.Keyvault.csproj">
+    <ProjectReference Include="..\..\..\Common\Commands.Common.KeyVault\Commands.Common.KeyVault.csproj">
       <Project>{836965C0-B198-4D01-B3D7-757DB62B49A0}</Project>
       <Name>Commands.Common.Keyvault</Name>
     </ProjectReference>
