--- a/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
@@ -62,6 +62,14 @@
     <Compile Include="Auditing\Model\DatabaseBlobAuditingSettingsModel.cs" />
     <Compile Include="Auditing\Model\ServerBlobAuditingSettingsModel.cs" />
     <Compile Include="Common\ResourceIdentityHelper.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\AzureSqlManagedDatabaseCmdletBase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\GetAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\NewAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\RemoveAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Cmdlet\RestoreAzureSqlManagedDatabase.cs" />
+    <Compile Include="ManagedDatabase\Model\AzureSqlManagedDatabaseModel.cs" />
+    <Compile Include="ManagedDatabase\Services\AzureSqlManagedDatabaseAdapter.cs" />
+    <Compile Include="ManagedDatabase\Services\AzureSqlManagedDatabaseCommunicator.cs" />
     <Compile Include="Database Backup\Cmdlet\AzureSqlDatabaseLongTermRetentionBackupCmdletBase.cs" />
     <Compile Include="Database Backup\Cmdlet\RemoveAzureRmSqlDatabaseLongTermRetentionBackup.cs" />
     <Compile Include="Database Backup\Cmdlet\GetAzureRmSqlDatabaseLongTermRetentionBackup.cs" />
@@ -84,6 +92,11 @@
     <Compile Include="Failover Group\Model\AllowReadOnlyFailoverToPrimary.cs" />
     <Compile Include="Failover Group\Services\AzureSqlFailoverGroupAdapter.cs" />
     <Compile Include="Failover Group\Services\AzureSqlFailoverGroupCommunicator.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\NewAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\RemoveAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\UpdateAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\SetAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Model\ManagedInstanceSku.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlDatabaseRecommendedActionCmdletBase.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlElasticPoolRecommendedActionCmdletBase.cs" />
     <Compile Include="RecommendedAction\Cmdlet\AzureSqlServerRecommendedActionCmdletBase.cs" />
@@ -194,6 +207,11 @@
     <Compile Include="Database Backup\Model\AzureSqlServerBackupLongTermRetentionVaultModel.cs" />
     <Compile Include="Database Backup\Model\AzureSqlDeletedDatabaseBackupModel.cs" />
     <Compile Include="Database Backup\Model\AzureSqlDatabaseGeoBackupModel.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\ManagedInstanceCmdletBase.cs" />
+    <Compile Include="ManagedInstance\Cmdlet\GetAzureSqlManagedInstance.cs" />
+    <Compile Include="ManagedInstance\Model\AzureSqlManagedInstanceModel.cs" />
+    <Compile Include="ManagedInstance\Services\AzureSqlManagedInstanceAdapter.cs" />
+    <Compile Include="ManagedInstance\Services\AzureSqlManagedInstanceCommunicator.cs" />
     <Compile Include="ServerDnsAlias\Cmdlet\AzureSqlServerDnsAliasCmdletBase.cs" />
     <Compile Include="ServerDnsAlias\Cmdlet\GetAzureSqlServerDnsAlias.cs" />
     <Compile Include="ServerDnsAlias\Cmdlet\RemoveAzureSqlServerDnsAlias.cs" />
@@ -457,7 +475,7 @@
     </ProjectReference>
     <Reference Include="Microsoft.Azure.Management.Sql, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Sql.1.13.0-preview\lib\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
+      <HintPath>C:\Users\a-petraj\azure-sdk-for-net-with-mi\src\SDKs\SqlManagement\Management.Sql\bin\Debug\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.Storage">
