--- a/src/ResourceManager/ServiceBus/Commands.ServiceBus/Commands.ServiceBus.csproj
+++ b/src/ResourceManager/ServiceBus/Commands.ServiceBus/Commands.ServiceBus.csproj
@@ -41,12 +41,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Azure.Management.ServiceBus">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.ServiceBus.1.2.0\lib\net452\Microsoft.Azure.Management.ServiceBus.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Cmdlets\AuthorizationRule\GetAzureServiceBusAuthorizationRule.cs" />
     <Compile Include="Cmdlets\AuthorizationRule\GetAzureServiceBusKey.cs" />
     <Compile Include="Cmdlets\AuthorizationRule\NewAzureServiceBusAuthorizationRule.cs" />
@@ -55,6 +49,11 @@
     <Compile Include="Cmdlets\AuthorizationRule\SetAzureServiceBusAuthorizationRule.cs" />
     <Compile Include="Cmdlets\AzureServiceBusCmdletBase.cs" />
     <Compile Include="Cmdlets\CheckNameAvailability\TestAzureServiceBusCheckNameAvailability.cs" />
+    <Compile Include="Cmdlets\MigrationConfiguration\GetAzureServiceBusMigrationConfiguration.cs" />
+    <Compile Include="Cmdlets\MigrationConfiguration\NewAzureServiceBusMigrationConfiguration.cs" />
+    <Compile Include="Cmdlets\MigrationConfiguration\RemoveAzureServiceBusMigrationConfiguration.cs" />
+    <Compile Include="Cmdlets\MigrationConfiguration\SetAzureServiceBusRevertMigrationConfiguration.cs" />
+    <Compile Include="Cmdlets\MigrationConfiguration\SetAzureServiceBusCompleteMigrationConfiguration.cs" />
     <Compile Include="Cmdlets\DRConfig\GetAzureServiceBusGeoDRConfiguration.cs" />
     <Compile Include="Cmdlets\DRConfig\NewAzureServiceBusGeoDRConfiguration.cs" />
     <Compile Include="Cmdlets\DRConfig\RemoveAzureServiceBusGeoDRConfiguration.cs" />
@@ -96,6 +95,7 @@
     <Compile Include="Models\PSRegenerateKeysAttributes.cs" />
     <Compile Include="Models\PSResourceAttributes.cs" />
     <Compile Include="Models\PSRulesAttributes.cs" />
+    <Compile Include="Models\PSServiceBusMigrationConfigurationAttributes.cs" />
     <Compile Include="Models\PSServiceBusDRConfigurationAttributes.cs" />
     <Compile Include="Models\PSSharedAccessAuthorizationRuleAttributes.cs" />
     <Compile Include="Models\PSSQLFilterAttributes.cs" />
@@ -142,6 +142,25 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Azure.Management.ServiceBus, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.ServiceBus.1.2.0\lib\net452\Microsoft.Azure.Management.ServiceBus.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Rest.ClientRuntime, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Rest.ClientRuntime.2.3.11\lib\net452\Microsoft.Rest.ClientRuntime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Rest.ClientRuntime.Azure, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Rest.ClientRuntime.Azure.3.3.12\lib\net452\Microsoft.Rest.ClientRuntime.Azure.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
