--- a/src/ResourceManager/SignalR/Commands.SignalR.Test/packages.config
+++ b/src/ResourceManager/SignalR/Commands.SignalR.Test/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.2.9-preview" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.TestFramework" version="1.5.1-preview" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.Management" version="4.1.1" targetFramework="net452" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
