--- a/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.Netcore.csproj
+++ b/src/ResourceManager/Profile/Commands.Profile/Commands.Profile.Netcore.csproj
@@ -54,6 +54,8 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common.Storage\Common.Storage.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.Common.Authentication.ResourceManager\Common.ResourceManager.Authentication.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.KeyVault\Common.KeyVault.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Storage.Management\Common.Storage.Management.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
