--- a/src/ResourceManager/AzureBatch/Commands.Batch/packages.config
+++ b/src/ResourceManager/AzureBatch/Commands.Batch/packages.config
@@ -5,8 +5,7 @@
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net452" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
+targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net45" />
